[project]
name = "movie-ticketing-agent-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.12",
    "google-adk>=1.18.0",
    "litellm>=1.79.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/movie_ticketing_agent_adk"]

[project.scripts]
movie-ticketing-remote-agent = "movie_ticketing_agent_adk.executor:run"